Nueva pagina de aterrizaje, modificaciones "login" y "registro"

--- a/Portal_del_Vecino/public_html/css/bootstrap.css
+++ b/Portal_del_Vecino/public_html/css/bootstrap.css
@@ -6918,8 +6918,7 @@ textarea{
   margin-top: -15px;
   width: 100%;
 }
-.asd{ 
+.center-image{ 
   display: block;
   margin: auto;
-  width: 40%;
 }
