--- a/Portal_del_Vecino/public_html/estilos/estilo.css
+++ b/Portal_del_Vecino/public_html/estilos/estilo.css
@@ -1,10 +1,4 @@
-/*
-To change this license header, choose License Headers in Project Properties.
-To change this template file, choose Tools | Templates
-and open the template in the editor.
-*/
-/* 
-    Created on : 11-sep-2017, 14:45:48
-    Author     : Jorge
-*/
-
+body{
+    background: url('../imagenes/fondo.jpg');
+    background-size: cover;
+}
